# R2_Ball_vision

./: README.md  task.txt
src/message_send_pkg/: CMakeLists.txt  package.xml
src/message_send_pkg/scripts/: video_generate.py
src/message_send_pkg/src/: depth_message.cpp  message_handle.cpp  message_send.cpp  message_test.cpp  video_handle.cpp
src/yolov5_ros/yolov5_ros/launch/: note.txt  yolo_v5.launch
src/yolov5_ros/yolov5_ros/scripts/: yolo_v5.py
src/yolov5_ros/yolov5_ros/yolov5/: base_ui.py  detect.py  gradio_demo.py  hub_detect.ipynb  image.ui  requirements.txt  train.py  untitled.ui  val.py
src/yolov5_ros/yolov5_ros/yolov5/4.20/: classes.txt
src/yolov5_ros/yolov5_ros/yolov5/4.20/exp11/: events.out.tfevents.1713604055.wys-Victus-by-HP-Gaming-Laptop-15-fa1xxx.24468.0  opt.yaml
src/yolov5_ros/yolov5_ros/yolov5/4.20/labels/train/: 1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  1033.txt  (+724 more)
src/yolov5_ros/yolov5_ros/yolov5/4.20/labels/val/: 1044.txt  1045.txt  1046.txt  1047.txt  152.txt  153.txt  154.txt  155.txt  156.txt  157.txt  158.txt  159.txt  160.txt  161.txt  162.txt  163.txt  164.txt  165.txt  166.txt  167.txt  168.txt  169.txt  18.txt  19.txt  20.txt  203.txt  204.txt  205.txt  206.txt  207.txt  208.txt  209.txt  21.txt  210.txt  211.txt  212.txt  213.txt  214.txt  215.txt  216.txt  (+165 more)
src/yolov5_ros/yolov5_ros/yolov5/UI/: base_ui.py  hub_detect.ipynb
src/yolov5_ros/yolov5_ros/yolov5/UI/shu/: image_ui.py
src/yolov5_ros/yolov5_ros/yolov5/UI/xiao/: image.ui  image_ui.py
src/yolov5_ros/yolov5_ros/yolov5/data/: data.yaml
src/yolov5_ros/yolov5_ros_msgs/: CMakeLists.txt  package.xml
src/yolov5_ros/yolov5_ros_msgs/msg/: basket.msg  port_serial.msg
